syntax = "proto3";
package raft;

option go_package = "github.com/djsurt/monkey-minder/server/proto/raftpb";

import "server/proto/raft/log.proto";

message VoteRequest {
  uint64 term = 1;
  uint64 candidateId = 2;
  uint64 lastLogIndex = 3;
  uint64 lastLogTerm = 4;
}

message Vote {
  uint64 term = 1;
  bool voteGranted = 2;
}

message AppendEntriesRequest {
  uint64 term = 1;
  uint64 leaderId = 2;
  uint64 prevLogIndex = 3;
  uint64 prevLogTerm = 4;
  repeated LogEntry entries = 5;
  uint64 leaderCommit = 6;
}

message AppendEntriesResult {
  uint64 term = 1;
  bool success = 2;
}

service Raft {
  rpc RequestVote (VoteRequest) returns (Vote);
  rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResult);
}
